kubernetes/apps/default/additional-ingress/app/tenchi-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenchi
spec:
  ingressClassName: internal
  rules:
    - host: &host tenchi.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tenchi
                port:
                  number: 8006
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tenchi
subsets:
  - addresses:
      - ip: ${TENCHI_IP}
    ports:
      - name: https
        port: 8006
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: moosefs
spec:
  ports:
    - name: https
      port: 8006
  type: ClusterIP
